logs/validate.20260326-082703.log
error[E0615]: attempted to take value of method `edges` on type `&Self`
   --> src/Chap52/EdgeSetGraphStPer.rs:117:22
    |
117 |                 self.edges@.len() + 1 < usize::MAX as nat,
    |                      ^^^^^ method, not a field
    |
help: use parentheses to call the method
    |
117 |                 self.edges()@.len() + 1 < usize::MAX as nat,
    |                           ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0615`.
Elapsed: 16s
Sampled Memory Usage: peak rust_verify RSS: 6062MB, peak z3 RSS: 0MB, min free: 19450MB
Sampled CPU Usage: rust_verify: 57s, z3 children: 0s
